dev:
  * add option noise_windows_func (default: 'min', to specify function with which to determine the final noise level from individual noise levels in different noise windows
  * add read_events_kwargs option, can be used to pass options to ObsPy's read_events
  * add subtract_local_depth option
v4.2:
  * allow to fix station site response to geometric mean of more than one station (for command line script)
  * excluded label is now optional
v4.1:
  * add request_window_tolerance parameter (in seconds, default 0.5) to allow for missing data at the edges of request window
  * add --overwrite-conf to allow to set all available config options from the command line
  * allow to set parameters for removal of response ("full" option)
  * several small improvements in imaging module
v4.0:
  * complete refactoring of Qopen script to use subcommands for the different tasks
  * add source subcommand to calculate sorce spectra and derive source parameters including moment magnitude with the help of previous results
  * add command line arguments to dump opt and fit pkl files for later plotting
  * add command line arguments to turn all ploting on or off
  * add option to plot uniform color in sds plot, do not sort events by event id in all_sds plot
v3.0:
  * prefix option is more stringent now and adds prefix also to log file
  * add option to filter event catalog, add option to resolve full SEED id, add corresponding command line options
  * add option to use coda normalization, no inversion for site effects and event spectra in this case
  * add option to not perform optimization, but only invert for b ("optimize": null)
  * add 2 Greens functions for 3d diffusion approximation, one for exact diffusion and one usable for determining coda Q within Qopen
  * add debug option (--pdb)
  * use viridis_r cmap instead of hot_r cmap by default
  * type of cmap can now be set with the config
  * indicate number of observations with color in source displacement spectrum plots